--- a/src/styles/navigation_section.css
+++ b/src/styles/navigation_section.css
@@ -73,7 +73,7 @@
   padding: 0.75em;
 }
 
-[role=banner] .coz-nav-pop--apps .--wrapping.coz-nav-group:not(.coz-nav--error) {
+[role=banner] .coz-nav-pop--apps .coz-nav-group--wrapping.coz-nav-group:not(.coz-nav--error) {
   flex-wrap: wrap;
   width: 40em;
 }
